--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
   },
   "keywords": [
     "google",
-    "google-meet"
+    "google-meet",
+    "calendar",
+    "api",
+    "booking",
+    "appointment",
+    "meetings",
+    "meet",
+    "google-meet-api",
+    "google-meet-link"
   ],
   "author": "kaustubh",
   "license": "ISC",
